--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -53,6 +53,10 @@
   options:
     url: https://raw.fastgit.org/freefq/free/master/v2
 
+# 模糊抓取订阅链接11
+- type: webfuzzsub
+  options:
+    url: https://www.cfmem.com/
 
 
 #################################################################################
@@ -146,37 +150,41 @@
   options:
     url: https://merlinblog.xyz/wiki/freess.html
 
-# 网页模糊抓取7
+# 网页模糊抓取1
 - type: webfuzz
   options:
     url: http://feeds.feedburner.com/mattkaydiary/pZjG
 
-# 网页模糊抓取6
+# 网页模糊抓取2
 - type: webfuzz
   options:
     url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
 
-# 网页模糊抓取5
+# 网页模糊抓取3
 - type: webfuzz
   options:
     url: https://github.com/UmeLabs/node.umelabs.dev
 
-# 网页模糊抓取2
+# 网页模糊抓取4
 - type: webfuzz
   options:
     url: https://github.com/v2ray-links/v2ray-free
 
-# 网页模糊抓取3
+# 网页模糊抓取5
 - type: webfuzz
   options:
     url: https://github.com/freefq/free
 
-# 网页模糊抓取5
+# 网页模糊抓取6
 - type: webfuzz
   options:
     url: https://445600.ml/mohujiedian
 
-
+# 网页模糊抓取7
+- type: webfuzz
+  options:
+    url: https://www.cfmem.com/
+    
 
 #################################################################################
 
@@ -629,81 +637,6 @@
   options:
     url: https://free.kingfu.cf/trojan/sub
 
-# 订阅链接“free886.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ss/sub
-
-# 订阅链接“free886.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/sip002/sub
-
-# 订阅链接“free886.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ssr/sub
-
-# 订阅链接“free886.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/vmess/sub
-
-# 订阅链接“free886.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/trojan/sub
-
-# 订阅链接“hello.stgod.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ss/sub
-
-# 订阅链接“hello.stgod.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/sip002/sub
-
-# 订阅链接“hello.stgod.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ssr/sub
-
-# 订阅链接“hello.stgod.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/vmess/sub
-
-# 订阅链接“hello.stgod.com”
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/trojan/sub
-
-# 订阅链接“ss.dswang.ga:8443”
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/ss/sub
-
-# 订阅链接“ss.dswang.ga:8443”
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/sip002/sub
-
-# 订阅链接“ss.dswang.ga:8443”
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/ssr/sub
-
-# 订阅链接“ss.dswang.ga:8443”
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/vmess/sub
-
-# 订阅链接“ss.dswang.ga:8443”
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/trojan/sub
-
 # 订阅链接“sspool.nl”
 - type: subscribe
   options:
@@ -728,81 +661,6 @@
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/trojan/sub
-
-# 订阅链接“6166888.xyz”
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/ss/sub
-
-# 订阅链接“6166888.xyz”
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/sip002/sub
-
-# 订阅链接“6166888.xyz”
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/ssr/sub
-
-# 订阅链接“6166888.xyz”
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/vmess/sub
-
-# 订阅链接“6166888.xyz”
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/trojan/sub
-
-# 订阅链接“proxypool.fly.dev”
-- type: subscribe
-  options:
-    url: https://proxypool.fly.dev/ss/sub
-
-# 订阅链接“proxypool.fly.dev”
-- type: subscribe
-  options:
-    url: https://proxypool.fly.dev/sip002/sub
-
-# 订阅链接“proxypool.fly.dev”
-- type: subscribe
-  options:
-    url: https://proxypool.fly.dev/ssr/sub
-
-# 订阅链接“proxypool.fly.dev”
-- type: subscribe
-  options:
-    url: https://proxypool.fly.dev/vmess/sub
-
-# 订阅链接“proxypool.fly.dev”
-- type: subscribe
-  options:
-    url: https://proxypool.fly.dev/trojan/sub
-
-# 订阅链接“proxypool-guest997.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://proxypool-guest997.herokuapp.com/ss/sub
-
-# 订阅链接“proxypool-guest997.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://proxypool-guest997.herokuapp.com/sip002/sub
-
-# 订阅链接“proxypool-guest997.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://proxypool-guest997.herokuapp.com/ssr/sub
-
-# 订阅链接“proxypool-guest997.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://proxypool-guest997.herokuapp.com/vmess/sub
-
-# 订阅链接“proxypool-guest997.herokuapp.com”
-- type: subscribe
-  options:
-    url: https://proxypool-guest997.herokuapp.com/trojan/sub
 
 # 订阅链接“www.linbaoz.com”
 - type: subscribe
@@ -835,4 +693,5 @@
 
 # 某个网站抓取
 - type: web-freessrxyz
-  options:  
+  options:
+    url: https://www.cfmem.com/
