--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -1,54 +1,52 @@
-# 模糊抓取订阅链接1
+#################################################################################
+# 模糊抓取订阅链接
+#################################################################################
+# 模糊抓取订阅链接/3wking
+- type: webfuzzsub
+  options:
+    url:https://3wking.github.io/proxypool/proxypool.list
+
+# 模糊抓取订阅链接/du5
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/du5/free/master/sub.list
 
-# 模糊抓取订阅链接2
+# 模糊抓取订阅链接/huaxinCLUB
 - type: webfuzzsub
   options:
     url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
 
-# 模糊抓取订阅链接3
+# 模糊抓取订阅链接/clashconfig
 - type: webfuzzsub
   options:
     url: https://github.com/clashconfig/online
 
-# 模糊抓取订阅链接4
+# 模糊抓取订阅链接/shoujiyanxishe
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etsub.list
 
-# 模糊抓取订阅链接5
-- type: webfuzzsub
-  options:
-    url: http://i.sqeven.me/discuss/detail/104
-
-# 模糊抓取订阅链接6
-- type: webfuzzsub
-  options:
-    url: http://i.sqeven.me/know/detail/103
-
-# 模糊抓取订阅链接7
-- type: webfuzzsub
-  options:
-    url: http://i.sqeven.me/know/detail/102
-
-# 模糊抓取订阅链接8
-- type: webfuzzsub
-  options:
-    url: http://i.sqeven.me/know/detail/100
-
-# 模糊抓取订阅链接9
+# 模糊抓取订阅链接/shoujiyanxishe
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etproxytest
 
-# 模糊抓取订阅链接10
+# 模糊抓取订阅链接/i.sqeven.me
 - type: webfuzzsub
   options:
-    url: https://api.ikuuu.science/link/iogQsfIRY9TU9VmO?sub=3&extend=1
+    url: http://i.sqeven.me/discuss/detail/104
 
-# 模糊抓取订阅链接10
+# 模糊抓取订阅链接/i.sqeven.me
+- type: webfuzzsub
+  options:
+    url: http://i.sqeven.me/discuss/detail/102
+
+# 模糊抓取订阅链接/i.sqeven.me
+- type: webfuzzsub
+  options:
+    url: http://i.sqeven.me/discuss/detail/100
+
+# 模糊抓取订阅链接/raw.fastgit.org
 - type: webfuzzsub
   options:
     url: https://raw.fastgit.org/freefq/free/master/v2
@@ -56,51 +54,58 @@
 
 
 #################################################################################
+# 订阅链接抓取
+#################################################################################
 
-# 订阅链接1
+# 订阅链接/subscribe
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/ss-sub
 
-# 订阅链接2
+# 订阅链接/subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/V2Ray
+
+# 订阅链接/subscribe
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/ssrsub
 
-# 订阅链接3
+# 订阅链接/subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
+
+# 订阅链接/v2ray-nodes
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/vmess.md
 
-# 订阅链接4
+# 订阅链接/v2ray-nodes
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/trojan.md
 
-# 订阅链接5
+# 订阅链接v2ray-nodes
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/ss.md
 
-# 订阅链接6
+# 订阅链接/v2ray-nodes
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/proxy.md
 
-# 订阅链接7
+# 订阅链接/adiwzx
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.txt
 
-# 订阅链接8
+# 订阅链接/shoujiyanxishe
 - type: subscribe
   options:
-    url: https://raw.githubusercontent.com/bujilangren/cangku/circleci-project-setup/0531.txt
-
-# 订阅链接9
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/vps
+    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/v2ray
 
 # 订阅链接10
 - type: subscribe
@@ -138,9 +143,9 @@
     url: https://yun.xiaoyao01.com/dingyue/fenxiang.txt
 
 
-
 #################################################################################
-
+# 网页模糊抓取
+#################################################################################
 # 网页模糊抓取
 - type: webfuzz
   options:
@@ -183,7 +188,8 @@
     
 
 #################################################################################
-
+# tg频道抓取
+#################################################################################
 # tg频道抓取
 - type: tgchannel
   options:
@@ -193,25 +199,7 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: jingpingziyuanfenxiang
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
     channel: ssrLists
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: ssrList2
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: freenodes
     num: 200
 
 # tg频道抓取
@@ -224,12 +212,6 @@
 - type: tgchannel
   options:
     channel: V2List
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: dangzhibu
     num: 200
 
 # tg频道抓取
@@ -271,12 +253,6 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: fqswhj
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
     channel: ssrtool
     num: 200
 
@@ -301,61 +277,19 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: ssrshares
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
     channel: gongyijichangfenxiang
     num: 200
 
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: ssrv2taytgshare
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: TgProxies
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: TG_Mtproxy_1
+    channel: jiedianfenxiangqun
     num: 200
 
 # tg频道抓取
 - type: tgchannel
   options:
     channel: baipiaojiedian
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: daolis_miao
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: vmesssr
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: sphard
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: pjzyj0
     num: 200
 
 # tg频道抓取
@@ -373,25 +307,7 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: NetfreexSrV
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: gyjclub
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
     channel: VPNFolder
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: youmtp
     num: 200
 
 # tg频道抓取
@@ -451,12 +367,6 @@
 # tg频道抓取
 - type: tgchannel
   options:
-    channel: baipiaodadui
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
     channel: mtproxy666
     num: 200
 
@@ -472,33 +382,20 @@
     channel: freeVPNserv
   num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: ShadowsocksRssr
-    num: 200
-
-# tg频道抓取   
-- type: tgchannel
-  options:
-    channel: Goodsharefeng
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: WangCai_2
-    num: 200
-
-
 
 #################################################################################
-
+# 翻墙党论坛抓取
+#################################################################################
 # 翻墙党论坛抓取
 - type: web-fanqiangdang
   options:
     url: https://fanqiangdang.com/forum-48-1.html
 
+
+
+#################################################################################
+# clash订阅链接抓取
+#################################################################################
 # clash格式订阅链接
 - type: clash
   options:
@@ -556,19 +453,21 @@
 
 
 
-#################################################################################
 
-# 订阅链接“fq.lonxin.net”
+#################################################################################
+# 订阅链接抓取
+#################################################################################
+# 订阅链接“fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ss/sub
 
-# 订阅链接“fq.lonxin.net”
+# 订阅链接“fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/sip002/sub
 
-# 订阅链接“fq.lonxin.net”
+# 订阅链接“fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ssr/sub
@@ -578,12 +477,12 @@
   options:
     url: https://fq.lonxin.net/vmess/sub
 
-# 订阅链接“fq.lonxin.net”
+# 订阅链接“fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/trojan/sub
 
-# 订阅链接“free.dswang.ga”
+# 订阅链接“free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/ss/sub
@@ -593,92 +492,92 @@
   options:
     url: https://free.dswang.ga/sip002/sub
 
-# 订阅链接“free.dswang.ga”
+# 订阅链接“free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/ssr/sub
 
-# 订阅链接“free.dswang.ga”
+# 订阅链接“free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/vmess/sub
 
-# 订阅链接“free.dswang.ga”
+# 订阅链接“free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/trojan/sub
 
-# 订阅链接“free.kingfu.cf”
+# 订阅链接“free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ss/sub
 
-# 订阅链接“free.kingfu.cf”
+# 订阅链接“free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/sip002/sub
 
-# 订阅链接“free.kingfu.cf”
+# 订阅链接“free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ssr/sub
 
-# 订阅链接“free.kingfu.cf”
+# 订阅链接“free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/vmess/sub
 
-# 订阅链接“free.kingfu.cf”
+# 订阅链接“free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/trojan/sub
 
-# 订阅链接“sspool.nl”
+# 订阅链接“sspool.herokuapp.com
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/ss/sub
 
-# 订阅链接“sspool.nl”
+# 订阅链接/sspool.herokuapp.com
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/sip002/sub
 
-# 订阅链接“sspool.nl”
+# 订阅链接/sspool.herokuapp.com
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/ssr/sub
 
-# 订阅链接“sspool.nl”
+# 订阅链接/sspool.herokuapp.com
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/vmess/sub
 
-# 订阅链接“sspool.nl”
+# 订阅链接“sspool.herokuapp.com”
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/trojan/sub
 
-# 订阅链接“www.linbaoz.com”
+# 订阅链接/www.linbaoz.com
 - type: subscribe
   options:
     url: https://www.linbaoz.com/ss/sub
 
-# 订阅链接“www.linbaoz.com”
+# 订阅链接/www.linbaoz.com
 - type: subscribe
   options:
     url: https://www.linbaoz.com/sip002/sub
 
-# 订阅链接“www.linbaoz.com”
+# 订阅链接/www.linbaoz.com
 - type: subscribe
   options:
     url: https://www.linbaoz.com/ssr/sub
 
-# 订阅链接“www.linbaoz.com”
+# 订阅链接/www.linbaoz.com
 - type: subscribe
   options:
     url: https://www.linbaoz.com/vmess/sub
 
-# 订阅链接“www.linbaoz.com”
+# 订阅链接/www.linbaoz.com
 - type: subscribe
   options:
     url: https://www.linbaoz.com/trojan/sub
@@ -686,9 +585,9 @@
 
 
 #################################################################################
-
-
 # 某个网站抓取
+#################################################################################
+# 某个网站抓取/www.cfmem.com
 - type: web-freessrxyz
   options:
     url: https://www.cfmem.com
