--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -6,6 +6,11 @@
   options:
     url:https://3wking.github.io/proxypool/proxypool.list
 
+# 模糊抓取订阅链接/3wking
+- type: webfuzzsub
+  options:
+    url:https://3wking.github.io/proxypool/sub.list
+
 # 模糊抓取订阅链接/du5
 - type: webfuzzsub
   options:
@@ -77,22 +82,22 @@
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
 
-# 订阅链接/v2ray-nodes
+# 订阅链接/colatiger
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/vmess.md
 
-# 订阅链接/v2ray-nodes
+# 订阅链接/colatiger
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/trojan.md
 
-# 订阅链接v2ray-nodes
+# 订阅链接/colatiger
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/ss.md
 
-# 订阅链接/v2ray-nodes
+# 订阅链接/colatiger
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/proxy.md
@@ -107,40 +112,55 @@
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/v2ray
 
-# 订阅链接10
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/bujilangren/cangku/circleci-project-setup/SurfShark.txt
-
-# 订阅链接11
+# 订阅链接/iwxf.netlify.app
 - type: subscribe
   options:
     url: https://iwxf.netlify.app
 
-# 订阅链接12
+# 订阅链接/liushengweinielulu
 - type: subscribe
   options:
     url: https://github.com/liushengweinielulu/V2RAY/raw/main/V2
 
-# 订阅链接13
+# 订阅链接/webdao
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/webdao/v2ray/master/nodes.txt
 
-# 订阅链接14
+# 订阅链接/learnhard-cn
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/free
 
-# 订阅链接15
+# 订阅链接/learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ss/sssub
+
+# 订阅链接/learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ssr/ssrsub
+
+# 订阅链接/learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/v2ray/v2raysub
+
+# 订阅链接/ermaozi
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt
 
-# 订阅链接16
+# 订阅链接/yun.xiaoyao01.com
 - type: subscribe
   options:
     url: https://yun.xiaoyao01.com/dingyue/fenxiang.txt
+
+# 订阅链接/v2ray-links
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/v2ray-links/v2ray-free/master/v2ray
 
 
 #################################################################################
@@ -451,88 +471,97 @@
   options:
     url:  https://raw.githubusercontent.com/chfchf0306/clash/main/clash
 
+# clash格式订阅链接11
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/config.yaml
+
+# clash格式订阅链接11
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
 
 
 
 #################################################################################
 # 订阅链接抓取
 #################################################################################
-# 订阅链接“fq.lonxin.net
+# 订阅链接/fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ss/sub
 
-# 订阅链接“fq.lonxin.net
+# 订阅链接/fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/sip002/sub
 
-# 订阅链接“fq.lonxin.net
+# 订阅链接/fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ssr/sub
 
-# 订阅链接“fq.lonxin.net”
+# 订阅链接/fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/vmess/sub
 
-# 订阅链接“fq.lonxin.net
+# 订阅链接/fq.lonxin.net
 - type: subscribe
   options:
     url: https://fq.lonxin.net/trojan/sub
 
-# 订阅链接“free.dswang.ga
+# 订阅链接/free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/ss/sub
 
-# 订阅链接“free.dswang.ga”
+# 订阅链接/free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/sip002/sub
 
-# 订阅链接“free.dswang.ga
+# 订阅链接/free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/ssr/sub
 
-# 订阅链接“free.dswang.ga
+# 订阅链接/free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/vmess/sub
 
-# 订阅链接“free.dswang.ga
+# 订阅链接/free.dswang.ga
 - type: subscribe
   options:
     url: https://free.dswang.ga/trojan/sub
 
-# 订阅链接“free.kingfu.cf
+# 订阅链接/free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ss/sub
 
-# 订阅链接“free.kingfu.cf
+# 订阅链接/free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/sip002/sub
 
-# 订阅链接“free.kingfu.cf
+# 订阅链接/free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ssr/sub
 
-# 订阅链接“free.kingfu.cf
+# 订阅链接/free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/vmess/sub
 
-# 订阅链接“free.kingfu.cf
+# 订阅链接/free.kingfu.cf
 - type: subscribe
   options:
     url: https://free.kingfu.cf/trojan/sub
 
-# 订阅链接“sspool.herokuapp.com
+# 订阅链接/sspool.herokuapp.com
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/ss/sub
@@ -581,6 +610,31 @@
 - type: subscribe
   options:
     url: https://www.linbaoz.com/trojan/sub
+
+# 订阅链接/proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/ss/sub
+
+# 订阅链接/proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/sip002/sub
+
+# 订阅链接/proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/ssr/sub
+
+# 订阅链接/proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/vmess/sub
+
+# 订阅链接/proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/trojan/sub
 
 
 
