--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -1,7 +1,634 @@
+# 模糊抓取订阅链接3wking
+- type: webfuzzsub
+  options:
+    url:https://3wking.github.io/proxypool/proxypool.list
+
+# 模糊抓取订阅链接3wking
+- type: webfuzzsub
+  options:
+    url:https://3wking.github.io/proxypool/sub.list
+
+# 模糊抓取订阅链接du5
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/du5/free/master/sub.list
+
+# 模糊抓取订阅链接huaxinCLUB
+- type: webfuzzsub
+  options:
+    url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
+
+# 模糊抓取订阅链接clashconfig
+- type: webfuzzsub
+  options:
+    url: https://github.com/clashconfig/online
+
+# 模糊抓取订阅链接shoujiyanxishe
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etsub.list
+
+# 模糊抓取订阅链接shoujiyanxishe
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etproxytest
+
+# 模糊抓取订阅链接i.sqeven.me
+- type: webfuzzsub
+  options:
+    url: http://i.sqeven.me/discuss/detail/104
+
+# 模糊抓取订阅链接i.sqeven.me
+- type: webfuzzsub
+  options:
+    url: http://i.sqeven.me/discuss/detail/102
+
+# 模糊抓取订阅链接i.sqeven.me
+- type: webfuzzsub
+  options:
+    url: http://i.sqeven.me/discuss/detail/100
+
+# 模糊抓取订阅链接raw.fastgit.org
+- type: webfuzzsub
+  options:
+    url: https://raw.fastgit.org/freefq/free/master/v2
+
+
+
+#################################################################################
+
+# 订阅链接subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/ss-sub
+
+# 订阅链接subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/V2Ray
+
+# 订阅链接subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/ssrsub
+
+# 订阅链接subscribe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
+
+# 订阅链接colatiger
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/vmess.md
+
+# 订阅链接colatiger
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/trojan.md
+
+# 订阅链接colatiger
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/ss.md
+
+# 订阅链接colatiger
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/proxy.md
+
+# 订阅链接adiwzx
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.txt
+
+# 订阅链接shoujiyanxishe
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/v2ray
+
+# 订阅链接iwxf.netlify.app
+- type: subscribe
+  options:
+    url: https://iwxf.netlify.app
+
+# 订阅链接liushengweinielulu
+- type: subscribe
+  options:
+    url: https://github.com/liushengweinielulu/V2RAY/raw/main/V2
+
+# 订阅链接webdao
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/webdao/v2ray/master/nodes.txt
+
+# 订阅链接learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/free
+
+# 订阅链接learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ss/sssub
+
+# 订阅链接learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ssr/ssrsub
+
+# 订阅链接learnhard-cn
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/v2ray/v2raysub
+
+# 订阅链接ermaozi
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt
+
+# 订阅链接yun.xiaoyao01.com
+- type: subscribe
+  options:
+    url: https://yun.xiaoyao01.com/dingyue/fenxiang.txt
+
+# 订阅链接v2ray-links
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/v2ray-links/v2ray-free/master/v2ray
+
+
+
+#################################################################################
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://merlinblog.xyz/wiki/freess.html
+
+# 网页模糊抓取1
+- type: webfuzz
+  options:
+    url: http://feeds.feedburner.com/mattkaydiary/pZjG
+
+# 网页模糊抓取2
+- type: webfuzz
+  options:
+    url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
+
+# 网页模糊抓取3
+- type: webfuzz
+  options:
+    url: https://github.com/UmeLabs/node.umelabs.dev
+
+# 网页模糊抓取4
+- type: webfuzz
+  options:
+    url: https://github.com/v2ray-links/v2ray-free
+
+# 网页模糊抓取5
+- type: webfuzz
+  options:
+    url: https://github.com/freefq/free
+
+# 网页模糊抓取6
+- type: webfuzz
+  options:
+    url: https://445600.ml/mohujiedian
+
+# 网页模糊抓取7
+- type: webfuzz
+  options:
+    url: https://www.cfmem.com
+
+
+
+#################################################################################
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrList
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrLists
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ShareCentre
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: V2List
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: SSRCOM
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: SSRSUB
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: freebaipiao
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: mftizi
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: masco899
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: FreeSSRNode
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrtool
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: freeshadowsock
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: fanqiang666
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrtool_crack
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: gongyijichangfenxiang
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: jiedianfenxiangqun
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: baipiaojiedian
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: jiedianfenxiang
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: flyingboat
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: VPNFolder
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ssrkn
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: abchz
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: yg251153
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: woyaofq
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: wwx_com
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: freessr4k
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: ultrafreevpn
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: VSshit
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: InternetSSR
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: mtproxy666
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: v2ray666
+    num: 200
+
+# tg频道抓取
+- type: tgchannel
+  options:
+    channel: freeVPNserv
+  num: 200
+
+
+
+#################################################################################
+
 # 翻墙党论坛抓取
 - type: web-fanqiangdang
   options:
     url: https://fanqiangdang.com/forum-48-1.html
+
+
+
+#################################################################################
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/du5/free/master/file/0909/Clash.yaml
+
+# clash格式订阅链接1
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/Clash.yml
+
+# clash格式订阅链接2
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.yml
+
+# clash格式订阅链接3
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/huaxinCLUB/NodeSpider/master/newYaml/mattkaydiary.yaml
+
+# clash格式订阅链接4
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/clashconfig/online/main/SurfShark(50168).yml
+
+# clash格式订阅链接5
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/skywolf627/VmessActions/main/subscribe/clash.yml
+
+# clash格式订阅链接6
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/zyzmzyz/free-nodes/master/Clash.yml
+
+# clash格式订阅链接7
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/oslook/clash-freenode/main/clash.yaml
+
+# clash格式订阅链接8
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/Happyflying666/clash/main/list
+
+# clash格式订阅链接9
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
+
+# clash格式订阅链接10
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/chfchf0306/clash/main/clash
+
+# clash格式订阅链接11
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/config.yaml
+
+# clash格式订阅链接12
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
+
+
+
+#################################################################################
+
+# 订阅链接fq.lonxin.net
+- type: subscribe
+  options:
+    url: https://fq.lonxin.net/ss/sub
+
+# 订阅链接fq.lonxin.net
+- type: subscribe
+  options:
+    url: https://fq.lonxin.net/sip002/sub
+
+# 订阅链接fq.lonxin.net
+- type: subscribe
+  options:
+    url: https://fq.lonxin.net/ssr/sub
+
+# 订阅链接fq.lonxin.net
+- type: subscribe
+  options:
+    url: https://fq.lonxin.net/vmess/sub
+
+# 订阅链接fq.lonxin.net
+- type: subscribe
+  options:
+    url: https://fq.lonxin.net/trojan/sub
+
+# 订阅链接free.dswang.ga
+- type: subscribe
+  options:
+    url: https://free.dswang.ga/ss/sub
+
+# 订阅链接free.dswang.ga
+- type: subscribe
+  options:
+    url: https://free.dswang.ga/sip002/sub
+
+# 订阅链接free.dswang.ga
+- type: subscribe
+  options:
+    url: https://free.dswang.ga/ssr/sub
+
+# 订阅链接free.dswang.ga
+- type: subscribe
+  options:
+    url: https://free.dswang.ga/vmess/sub
+
+# 订阅链接free.dswang.ga
+- type: subscribe
+  options:
+    url: https://free.dswang.ga/trojan/sub
+
+# 订阅链接free.kingfu.cf
+- type: subscribe
+  options:
+    url: https://free.kingfu.cf/ss/sub
+
+# 订阅链接free.kingfu.cf
+- type: subscribe
+  options:
+    url: https://free.kingfu.cf/sip002/sub
+
+# 订阅链接free.kingfu.cf
+- type: subscribe
+  options:
+    url: https://free.kingfu.cf/ssr/sub
+
+# 订阅链接free.kingfu.cf
+- type: subscribe
+  options:
+    url: https://free.kingfu.cf/vmess/sub
+
+# 订阅链接free.kingfu.cf
+- type: subscribe
+  options:
+    url: https://free.kingfu.cf/trojan/sub
+
+# 订阅链接sspool.herokuapp.com
+- type: subscribe
+  options:
+    url: https://sspool.herokuapp.com/ss/sub
+
+# 订阅链接sspool.herokuapp.com
+- type: subscribe
+  options:
+    url: https://sspool.herokuapp.com/sip002/sub
+
+# 订阅链接sspool.herokuapp.com
+- type: subscribe
+  options:
+    url: https://sspool.herokuapp.com/ssr/sub
+
+# 订阅链接sspool.herokuapp.com
+- type: subscribe
+  options:
+    url: https://sspool.herokuapp.com/vmess/sub
+
+# 订阅链接sspool.herokuapp.com
+- type: subscribe
+  options:
+    url: https://sspool.herokuapp.com/trojan/sub
+
+# 订阅链接www.linbaoz.com
+- type: subscribe
+  options:
+    url: https://www.linbaoz.com/ss/sub
+
+# 订阅链接www.linbaoz.com
+- type: subscribe
+  options:
+    url: https://www.linbaoz.com/sip002/sub
+
+# 订阅链接www.linbaoz.com
+- type: subscribe
+  options:
+    url: https://www.linbaoz.com/ssr/sub
+
+# 订阅链接www.linbaoz.com
+- type: subscribe
+  options:
+    url: https://www.linbaoz.com/vmess/sub
+
+# 订阅链接www.linbaoz.com
+- type: subscribe
+  options:
+    url: https://www.linbaoz.com/trojan/sub
+
+# 订阅链接proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/ss/sub
+
+# 订阅链接proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/sip002/sub
+
+# 订阅链接proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/ssr/sub
+
+# 订阅链接proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/vmess/sub
+
+# 订阅链接proxy.yugogo.xyz
+- type: subscribe
+  options:
+    url: https://proxy.yugogo.xyz/trojan/sub
+
 
 
 #################################################################################
