--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -140,41 +140,40 @@
 
 
 #################################################################################
-
 # 网页模糊抓取
+
 - type: webfuzz
   options:
     url: https://merlinblog.xyz/wiki/freess.html
 
-# 网页模糊抓取7
 - type: webfuzz
   options:
     url: http://feeds.feedburner.com/mattkaydiary/pZjG
 
-# 网页模糊抓取6
 - type: webfuzz
   options:
     url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
 
-# 网页模糊抓取5
 - type: webfuzz
   options:
     url: https://github.com/UmeLabs/node.umelabs.dev
 
-# 网页模糊抓取2
 - type: webfuzz
   options:
     url: https://github.com/v2ray-links/v2ray-free
 
-# 网页模糊抓取3
 - type: webfuzz
   options:
     url: https://github.com/freefq/free
 
-# 网页模糊抓取5
 - type: webfuzz
   options:
     url: https://445600.ml/mohujiedian
+
+- type: webfuzz
+  options:
+    url: https://www.cfmem.com
+
 
 
 
