--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -53,96 +53,10 @@
 
 #################################################################################
 
-# 订阅链接"ssrsub"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/ssrsub/ssr/master/ss-sub
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/ssrsub/ssr/master/V2Ray
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/ssrsub/ssr/master/ssrsub
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
-
-# 订阅链接"colatiger"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/vmess.md
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/trojan.md
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/ss.md
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/proxy.md
-
-# 订阅链接"learnhard-cn"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/free
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ss/sssub
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ssr/ssrsub
-
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/v2ray/v2raysub
-
-# 订阅链接"ermaozi"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt
-
-# 订阅链接"yun.xiaoyao01.com"
-- type: subscribe
-  options:
-    url: https://yun.xiaoyao01.com/dingyue/fenxiang.txt
-
 # 订阅链接"v2ray-links"
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/v2ray-links/v2ray-free/master/v2ray
-
-# 订阅链接"adiwzx"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.txt
-
-# 订阅链接"shoujiyanxishe"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/v2ray
-
-# 订阅链接"iwxf.netlify.app"
-- type: subscribe
-  options:
-    url: https://iwxf.netlify.app
-
-# 订阅链接"liushengweinielulu"
-- type: subscribe
-  options:
-    url: https://github.com/liushengweinielulu/V2RAY/raw/main/V2
-
-# 订阅链接"webdao"
-- type: subscribe
-  options:
-    url: https://raw.githubusercontent.com/webdao/v2ray/master/nodes.txt
 
 
 
@@ -406,143 +320,11 @@
   options:
     url:  https://raw.githubusercontent.com/chfchf0306/clash/main/clash
 
-- type: clash
-  options:
-    url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/config.yaml
-
-- type: clash
-  options:
-    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
 
 
 
 #################################################################################
-
-# 订阅链接"fq.lonxin.net"
-- type: subscribe
-  options:
-    url: https://fq.lonxin.net/ss/sub
-
-- type: subscribe
-  options:
-    url: https://fq.lonxin.net/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://fq.lonxin.net/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://fq.lonxin.net/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://fq.lonxin.net/trojan/sub
-
-# 订阅链接"free.dswang.ga"
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/ss/sub
-
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://free.dswang.ga/trojan/sub
-
-# 订阅链接"free.kingfu.cf"
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ss/sub
-
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://free.kingfu.cf/trojan/sub
-
-# 订阅链接"sspool.herokuapp.com"
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/ss/sub
-
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://sspool.herokuapp.com/trojan/sub
-
-# 订阅链接"www.linbaoz.com"
-- type: subscribe
-  options:
-    url: https://www.linbaoz.com/ss/sub
-
-- type: subscribe
-  options:
-    url: https://www.linbaoz.com/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://www.linbaoz.com/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://www.linbaoz.com/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://www.linbaoz.com/trojan/sub
-
-# 订阅链接"proxy.yugogo.xyz"
-- type: subscribe
-  options:
-    url: https://proxy.yugogo.xyz/ss/sub
-
-- type: subscribe
-  options:
-    url: https://proxy.yugogo.xyz/sip002/sub
-
-- type: subscribe
-  options:
-    url: https://proxy.yugogo.xyz/ssr/sub
-
-- type: subscribe
-  options:
-    url: https://proxy.yugogo.xyz/vmess/sub
-
-- type: subscribe
-  options:
-    url: https://proxy.yugogo.xyz/trojan/sub
+# 订阅链接
 
 
 
