--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -326,6 +326,9 @@
 #################################################################################
 # 订阅链接
 
+- type: subscribe
+  options:
+
 
 
 #################################################################################
