--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -326,7 +326,8 @@
 #################################################################################
 # 订阅链接
 
-
+- type: subscribe
+  options:
 
 #################################################################################
 # 某个网站抓取
